Fix error when room log is empty. Fix alignment of tabs on log page.

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -855,11 +855,12 @@ a.button, button
   float: right
   margin:
     top: 45px
-    right: -87px
+    right: -110px
   ul
     list-style: none
   li
     text-align: right
+    width: 100px
     a
       padding: 4px 10px
       text-decoration: none
